--- a/src/main/resources/static/secure/overview.htm
+++ b/src/main/resources/static/secure/overview.htm
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/secure.css">
         <script src="../js/validateCookie.js"></script>
+
+        <div class="topnav">
+            <a href="overview.htm">Overview</a>
+            <a href="history.htm">History</a>
+            <a href="payment.htm">Payment</a>
+            <a onclick="removeCookie()" href="../login.htm" style="float: right;">Log Out</a>
+        </div>
     </head>
     <body onload="request()">
         <h1>Account Overview:</h1>
@@ -10,13 +19,6 @@
 
         <h2>Savings:</h2>
         <h3><div id="savings">Balance: </div></h3><br>
-        <p>Go to <a href="history.htm">Transaction History</a></p>
-
-        <form action="payment.htm">
-            <input type="submit" value="Make A Payment">
-        </form>
-        <br>
-        <button onclick="removeCookie()">Log Out</button>
 
         <script>
             function request() {
