--- a/src/main/resources/static/secure/payment.htm
+++ b/src/main/resources/static/secure/payment.htm
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/secure.css">
         <script src="../js/validateCookie.js"></script>
+
+        <div class="topnav">
+            <a href="overview.htm">Overview</a>
+            <a href="history.htm">History</a>
+            <a href="payment.htm">Payment</a>
+            <a onclick="removeCookie()" href="../login.htm" style="float: right;">Log Out</a>
+        </div>
     </head>
     <body onload="validateCookie();">
         <h1>Make A Payment:</h1>
-        <form action="/controller/payment" method="POST">
-            <label for="account">Select an Account to Pay From:</label><br>
-            <select name="account" id="account">
+        <form class="form" action="/controller/payment" method="POST">
+            <label for="account">Select an Account to Pay From:</label><br><br>
+            <select name="account" class="select" id="account">
                 <option value="Checking">Checking</option>
                 <option value="Savings">Savings</option>
             </select><br><br>
             <label for="runame">Recipient's Username:</label><br>
-            <input type="text" id="runame" name="runame" required><br>
+            <input type="text" id="runame" name="runame" required maxlength="20"><br>
             <label for="amount">Amount:</label><br>
-            <input type="text" id="amount" name="amount" required><br>
-            <label for="raccount">Select an Account to Pay To:</label><br>
-            <select name="raccount" id="raccount">
+            <input type="text" id="amount" name="amount" required maxlength="10"><br><br>
+            <label for="raccount">Select an Account to Pay To:</label><br><br>
+            <select name="raccount" class="select" id="raccount">
                 <option value="Checking">Checking</option>
                 <option value="Savings">Savings</option>
             </select><br><br>
-            <label for="memo">Memo:</label>
-            <input type="text" id="memo" name="memo" required><br><br>
-            <input type="submit" value="Confirm Transaction">
+            <label for="memo">Memo:</label><br>
+            <input type="text" id="memo" name="memo" required maxlength="50"><br><br>
+            <input type="submit" class="button" value="Confirm Transaction">
         </form>
-        <br>
-        <button onclick="document.location='overview.htm'">Back to Account Overview</button>
-        <br>
-        <button onclick="removeCookie()">Log Out</button>
+
     </body>
 </html>
-
-<!--- todo:
-add timestamp catching, username search autofill?, better amount, account fields
-confirm popup
-login checker
---->
